# http-cache

./: .commitlintrc.yaml  .dockerignore  .env  .env.example  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix  package-lock.json  package.json  renovate.json  result
.github/workflows/: docker-image.yml  docker-publish.yml  docker.yml  helm-publish.yml  helm.yml
charts/http-cache/: Chart.yaml  values.yaml
charts/http-cache/templates/: _helpers.tpl  deployment.yaml  google-service-account.yaml  hpa.yaml  service.yaml
scripts/: color-util.sh  prepare-release  release  version  version-base
scripts/init/: git-hooks
scripts/util/: repo-root
src/: main.rs  options.rs  proxy.rs
src/cache/: base.rs  create_cache_storage_from_url.rs  fs.rs  layer.rs  metadata.rs  mod.rs  redis.rs  service.rs
src/cache/storage/: base.rs  fs.rs  mod.rs  opendal.rs  redis.rs
src/cache/storage/test/: mod.rs  opendal.rs
src/cache/storage/util/: hash.rs  metadata_prefix.rs  mod.rs
src/metadata/: get_cache_key_prefix.rs  get_upstream_url.rs  layer.rs  mod.rs
src/test/fixture/: dotenv_fixture.rs  mod.rs  tracing_fixture.rs
src/upstream_uri/: layer.rs  mod.rs
