[package]
name = "http-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.70"
clap = { version = "4.3.10", features = ["derive", "env"] }
color-eyre = "0.6"
dotenv = "0.15.0"
eyre = "0.6.8"
url = "2.4.0"
futures = "0.3.28"
http = { version = "0.2.9" }
hyper = { version = "0.14.26", features = ["client", "server", "stream"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
tokio-util = { version = "0.7.7", features = ["compat"] }
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["make", "util"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
sha2 = "0.10.7"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
opendal = { version = "0.38", features = [
    "services-gcs",
    "services-fs",
    "rustls",
], default-features = false }
