[package]
name = "http-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive", "env"] }
color-eyre = "0.6"
thiserror = "1.0.57"
serde-error = "0.1.2"
dotenv = "0.15.0"
eyre = "0.6.12"
url = "2.5.0"
futures = "0.3.30"
http = { version = "0.2.11" }
hyper = { version = "0.14.28", features = ["client", "server", "stream"] }
hyper-rustls = { version = "0.24.2", features = ["http2"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["make", "util"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
opendal = { version = "0.45.1", features = [
    "services-gcs",
    "services-fs",
    "rustls",
], default-features = false }

[dev-dependencies]
tempfile = "3.10.1"
time = "0.3.34"
